@@ -2,20 +2,23 @@ package TaskManager;
 
 import Task.Task;
 import java.util.ArrayList;
+import java.util.LinkedList;
+import java.util.List;
 
 public class InMemoryHistoryManager implements HistoryManager {
-    private final ArrayList<Task> history = new ArrayList<>();
+    private static final int MAX_HISTORY_SIZE = 10;
+    private final LinkedList<Task> history = new LinkedList<>();
 
     @Override
     public void add(Task task) {
-        if (history.size() == 10) {
-            history.remove(0);
+        if (history.size() == MAX_HISTORY_SIZE) {
+            history.removeFirst();
         }
         history.add(task);
     }
 
     @Override
-    public ArrayList<Task> getHistory() {
-        return new ArrayList<>(history);
+    public List<Task> getHistory() {
+        return new LinkedList<>(history);
     }
 }
